tests/errors/syn6.kt
when { // Missing argument after when
    x == 1 -> println("One")
}